test/simple/ill-typed/id_fun.caprice
(* TEST
  include refutable;
*)


let f : int -> bool = fun x -> x
